# lifestyle

./: .gitignore  Cargo.toml  README.md  build.rs  tsconfig.json
.github/workflows/: rust.yml
database/: basic.json  calories.txt  progress.txt  shopping.txt  valorant.txt
public/: index.html  not_found.html
src/: lib.rs
src/core/: mod.rs  response.rs  server.rs  ui.rs
src/core/api/: calories.rs  mod.rs  populated.rs  progress.rs  rendered.rs
src/core/constant/: mod.rs  serve_file.rs
src/core/content/: serve_file.rs
src/core/state_data/: calories.rs  mod.rs  progress.rs  shopping_item.rs  state.rs  valorant_game.rs
www/: index.html  index.ts  sample.html  style.css  test.js
www/api/: explanation.html
www/modals/: calories.html  progress.html
www/pages/: calories.html  goals.html  progress.html
