[package]
name = "tracking"
version = "0.1.0"
authors = ["nuhtan <ncrichardson15@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.14.0", default-features = false, features = ['crossterm'] }
crossterm = "0.19.0"
serde = { version = "1.0.124", features = ['derive'] }
serde_json = "1.0.64"